# nu

./: .gitignore  404.html  AUTHORS.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README.rst  TODO.md  index.html  make.py  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: build.yml  codeql.yml  docs.yml  test.yml
architecture/: index.html
authors/: index.html
changes/: index.html
code_of_conduct/: index.html
conf/: mu.appdata.xml  mu.codewith.editor.desktop
contributing/: index.html
copyright/: index.html
debugger/: index.html
design/: index.html
design/file_reading_and_writing/: index.html
design/line-endings/: index.html
design/runtime_virtual_environment/: index.html
design/settings-and-sessions/: index.html
docs/: api.md  architecture.md  authors.md  changes.md  code_of_conduct.md  contributing.md  copyright.md  debugger.md  design.md  first-steps.md  index.md  license.md  modes.md  packaging.md  plugins.md  release.md  setup.md  tests.md  translations.md  user-experience.md  website.md
docs/design/: file_reading_and_writing.md  line-endings.md  runtime_virtual_environment.md  settings-and-sessions.md
first-steps/: index.html
license/: index.html
modes/: index.html
mu/: __init__.py  app.py  logic.py  settings.py  virtual_environment.py
mu/debugger/: __init__.py  client.py  runner.py
mu/interface/: dialogs.py  editor.py  main.py  panes.py  themes.py  widgets.py
mu/modes/: __init__.py  base.py  circuitpython.py  debugger.py  pygamezero.py  python3.py
mu/modes/api/: __init__.py
mu/resources/: __init__.py
mu/wheels/: __init__.py
package/: dmg_settings.py
package/icons/: mu.icns
packaging/: index.html
plugins/: index.html
release/: index.html
search/: search_index.json
setup/: index.html
tests/: conftest.py  index.html  test_app.py  test_logic.py  test_resources.py  test_settings.py
tests/debugger/: test_client.py  test_runner.py  test_utils.py
tests/interface/: test_dialogs.py  test_editor.py  test_main.py  test_panes.py  test_themes.py
tests/modes/: test_base.py  test_circuitpython.py  test_debug.py  test_pygamezero.py  test_python3.py
tests/virtual_environment/: test_pip.py  test_process.py  test_uv.py  test_virtual_environment.py
translations/: index.html
user-experience/: index.html
utils/: adafruit_api.py  avatar.py  flask_api.py  gh_downloads.py  mkapi.py  pgzero_api.py  python3_api.py
website/: index.html
