# uv-based dependency definition for the "nu" fork of the Mu editor.
#
# Dependencies below mirror setup.py's install_requires / extras_require so the
# uv workflow matches the original project. setup.py / setup.cfg remain the
# canonical packaging config used by the `make` targets and platform installers;
# `package = false` (under [tool.uv]) tells uv to manage the dependencies in the
# virtualenv without trying to build/install the project itself.
#
# Phase 2 of the modernization (see TODO.md): the editor now targets PyQt6 and
# Python >=3.11. `uv sync` downloads a managed CPython for the venv.
[project]
name = "nu"
version = "1.2.2"
description = "A simple Python editor for beginner programmers. A maintained continuation of the Mu editor."
requires-python = ">=3.11"
dependencies = [
    # Qt6 stack. PyQt6 ships manylinux/macOS/Windows wheels (incl. aarch64),
    # so the old "skip on ARM" markers from the PyQt5 era are no longer needed.
    "PyQt6>=6.6",
    "PyQt6-QScintilla>=2.14",
    "PyQt6-Charts>=6.6",
    # Jupyter REPL stack. Modernized from the frozen Py3.5-era pins.
    "qtconsole>=5.5",
    "ipykernel>=6.29",
    "jupyter-client>=8.0",
    "pyzmq",
    # Serial port discovery / CircuitPython board identification.
    "adafruit-board-toolkit~=1.1",
    "pyserial~=3.5",
    "nudatus>=0.0.3",
    # flake8 brings pycodestyle + pyflakes, which are runtime dependencies.
    "flake8>=3.8.3",
    # `black` powers the "Tidy" button (mu/logic.py). Kept at the existing pin
    # for now (the <22.1.0 ceiling resolves to a build that runs on 3.11);
    # bumping black + reformatting is part of the separate toolchain phase.
    "click<=8.0.4",
    "black>=19.10b0,<22.1.0",
    "platformdirs>=2.6",
    "semver>=2.8.0",
    "virtualenv>=20.0.0",
    "wheel",
    "pywin32; sys_platform == 'win32'",
]

[project.optional-dependencies]
tests = [
    "pytest>=4.6",
    "pytest-cov",
    "pytest-random-order>=1.0.0",
    "pytest-faulthandler",
    "pytest-timeout",
    "coverage",
]
docs = ["sphinx"]
package = ["wheel", "twine"]
i18n = ["babel"]
utils = ["scrapy", "beautifulsoup4", "requests"]
# ruff is the dev lint+format tool (replaces flake8/pycodestyle/pyflakes/black
# *as dev tools*; those three stay as runtime deps for the in-editor checker
# and the "Tidy" button — see install_requires above).
lint = ["ruff>=0.6"]
dev = ["nu[tests]", "nu[docs]", "nu[package]", "nu[i18n]", "nu[lint]"]
all = [
    "nu[tests]",
    "nu[docs]",
    "nu[package]",
    "nu[i18n]",
    "nu[utils]",
    "nu[lint]",
]

[tool.uv]
package = false

[tool.ruff]
# Single source of truth for both the formatter wrap and the E501 lint check.
# (The old split was black -l 79 for formatting + flake8 max-line-length 88.)
line-length = 88
target-version = "py311"
# `_` is gettext's translation function, injected as a builtin at runtime.
builtins = ["_"]
extend-exclude = [
    "mu/contrib",     # vendored third-party code (now empty)
    "mu/modes/api",   # generated API stubs
    "docs",
]

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F): the rules flake8 ran by default.
select = ["E", "W", "F"]
ignore = [
    "E203",  # whitespace before ':' — conflicts with the formatter
    "E731",  # assignment of a lambda expression
    "E402",  # module-level import not at top of file
]
