# Single source of truth for the "nu" fork of the Mu editor.
#
# Since Phase 1d (see TODO.md) this file is the canonical packaging definition:
# setup.py / setup.cfg were retired and the metadata lives here, built with the
# hatchling backend. The distribution is published as `nu-editor` (the fork's
# own PyPI identity, replacing the inherited `mu-editor` name); the importable
# package remains `mu`, and the version is read from mu/__init__.py.
#
# The editor targets PyQt6 and Python >=3.11 (verified through 3.14). `uv sync`
# downloads a managed CPython for the venv and installs the project editable.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nu-editor"
dynamic = ["version"]
description = "A simple Python editor for beginner programmers. A maintained continuation of the Mu editor."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
# nu's maintainer. The original Mu editor was created by Nicholas H. Tollervey
# and the Mu community — credited as the original creators in AUTHORS.md and via
# the `Upstream` URL below.
authors = [
    { name = "Evan Gress", email = "kovirlabs@kovir.org" },
    { name = "Kovir Labs", email = "kovirlabs@kovir.org" },
]
maintainers = [
    { name = "Evan Gress", email = "kovirlabs@kovir.org" },
    { name = "Kovir Labs", email = "kovirlabs@kovir.org" },
]
keywords = ["editor", "python", "beginner", "education", "mu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Text Editors",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    # Qt6 stack. PyQt6 ships manylinux/macOS/Windows wheels (incl. aarch64),
    # so the old "skip on ARM" markers from the PyQt5 era are no longer needed.
    "PyQt6>=6.6",
    "PyQt6-QScintilla>=2.14",
    "PyQt6-Charts>=6.6",
    # Jupyter REPL stack. Modernized from the frozen Py3.5-era pins.
    "qtconsole>=5.5",
    "ipykernel>=6.29",
    "jupyter-client>=8.0",
    "pyzmq",
    # Serial port discovery / CircuitPython board identification.
    "adafruit-board-toolkit~=1.1",
    "pyserial~=3.5",
    "nudatus>=0.0.3",
    # flake8 brings pycodestyle + pyflakes, which are runtime dependencies
    # (the in-editor code checker in mu/logic.py uses their APIs directly).
    "flake8>=3.8.3",
    # `black` powers the "Tidy" button (mu/logic.py) at runtime. Bumped off the
    # old <22.1.0 pin (which crashed on Python 3.12+: `ast.Str` removed) now
    # that ruff — not black — is the dev formatter, so the bump cannot reflow
    # the source tree. The old `click<=8.0.4` clamp (only needed by old black)
    # is gone; click now comes in transitively via black.
    "black>=24",
    "platformdirs>=2.6",
    "semver>=2.8.0",
    # `uv` creates and manages the user's virtual environment (Phase 4a, see
    # TODO.md) — it replaces the old `python -m virtualenv` call in
    # mu/virtual_environment.py. The PyPI `uv` package ships the binary, which
    # `find_uv()` discovers on PATH (a packaged build can override via MU_UV).
    "uv>=0.5",
    "wheel",
    "pywin32; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/kovirlabs/nu"
Upstream = "https://github.com/mu-editor/mu"

[project.scripts]
nu-editor = "mu.app:run"

[project.optional-dependencies]
tests = [
    "pytest>=4.6",
    "pytest-cov",
    "pytest-random-order>=1.0.0",
    "pytest-faulthandler",
    "pytest-timeout",
    "coverage",
]
docs = ["mkdocs-material", "mkdocstrings[python]"]
package = ["build", "wheel", "twine", "briefcase>=0.3.19"]
i18n = ["babel"]
utils = ["scrapy", "beautifulsoup4", "requests"]
# ruff is the dev lint+format tool (replaces flake8/pycodestyle/pyflakes/black
# *as dev tools*; those stay as runtime deps for the in-editor checker and the
# "Tidy" button — see [project.dependencies] above).
lint = ["ruff>=0.6"]
dev = [
    "nu-editor[tests]",
    "nu-editor[docs]",
    "nu-editor[package]",
    "nu-editor[i18n]",
    "nu-editor[lint]",
]
all = [
    "nu-editor[tests]",
    "nu-editor[docs]",
    "nu-editor[package]",
    "nu-editor[i18n]",
    "nu-editor[utils]",
    "nu-editor[lint]",
]

[tool.hatch.version]
# mu/__init__.py stays the single version source (also parsed by the
# platform installer tooling).
path = "mu/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mu"]

[tool.hatch.build.targets.sdist]
include = [
    "/mu",
    "/conf",
    "/run.py",
    "/README.md",
    "/CHANGES.md",
    "/LICENSE",
]

# ---------------------------------------------------------------------------
# Briefcase — native installers (Phase 4d, see TODO.md).
#
# Replaces the stale pup pipeline (Py3.8-only, 3.10-capped, macOS fork +
# custom Docker). Briefcase builds the AppImage / .dmg / .msi from this single
# definition; CI (.github/workflows/build.yml) runs one OS per job. The app
# ships its third-party deps (PyQt6 + the uv binary via the `uv` wheel) plus
# the baseline wheels zip (built by `python -m mu.wheels --package`) so the
# first-run `uv venv` works offline. The packaged interpreter is reused for the
# user env (`uv venv --python sys.executable`), so no separate CPython download
# is required at first run.
# ---------------------------------------------------------------------------
[tool.briefcase]
project_name = "nu-editor"
bundle = "org.kovir"
# Briefcase needs a concrete version string; keep this in sync with
# mu/__init__.py, which stays the canonical source the rest of the tooling reads.
version = "2.0.0b1"
url = "https://github.com/kovirlabs/nu"
# `author` is the installer publisher AND the Windows install-path folder
# (Program Files\<author>\<formal_name>), so this is nu's maintainer — not the
# original Mu author, who is credited in AUTHORS.md and via the Upstream link.
author = "Kovir Labs"
author_email = "kovirlabs@kovir.org"
license.file = "LICENSE"

[tool.briefcase.app.mu]
# The program name across all installers: the Windows install-path leaf +
# Add/Remove entry, the macOS .app, the AppImage filename. (The app key stays
# `mu`, so the app is still launched as `python -m mu`.)
formal_name = "nu-editor"
description = "A simple Python editor for beginner programmers."
long_description = """A simple, modal Python editor for beginner programmers,
built on PyQt6. Nu is a maintained continuation of the Mu editor.

Mu manages a separate, uv-driven Python environment for the learner's own code,
keeping it isolated from the editor's own interpreter.
"""
icon = "package/icons/mu"
# Briefcase copies these source trees into the app verbatim (data files
# included): mu/resources, mu/locale and the mu/wheels/<version>.zip ride along.
sources = ["mu"]
# Third-party runtime deps installed into the app bundle. Mirrors
# [project.dependencies] above (the app's own `mu` package comes from `sources`,
# not from here). `uv` MUST stay listed: its wheel ships the binary that
# find_uv()/uv.find_uv_bin() resolves at runtime in the packaged app.
requires = [
    "PyQt6>=6.6",
    "PyQt6-QScintilla>=2.14",
    "PyQt6-Charts>=6.6",
    "qtconsole>=5.5",
    "ipykernel>=6.29",
    "jupyter-client>=8.0",
    "pyzmq",
    "adafruit-board-toolkit~=1.1",
    "pyserial~=3.5",
    "nudatus>=0.0.3",
    "flake8>=3.8.3",
    "black>=24",
    "platformdirs>=2.6",
    "semver>=2.8.0",
    "uv>=0.5",
    "wheel",
]

[tool.briefcase.app.mu.macOS]
universal_build = false

[tool.briefcase.app.mu.windows]
# pywin32 is Windows-only; kept out of the cross-platform `requires` above.
requires = ["pywin32; sys_platform == 'win32'"]

[tool.briefcase.app.mu.linux]
# Build-time system packages (manylinux/Docker) and runtime shared libs the
# bundled Qt6 xcb platform plugin needs. Refined against the local Linux build.
requires = []

[tool.briefcase.app.mu.linux.system.debian]
system_requires = [
    "libxcb-cursor0",
    "libxcb-xinerama0",
    "libegl1",
    "libgl1",
]
system_runtime_requires = [
    "libxcb-cursor0",
    "libxcb-xinerama0",
    "libegl1",
    "libgl1",
]

[tool.ruff]
# Single source of truth for both the formatter wrap and the E501 lint check.
# (The old split was black -l 79 for formatting + flake8 max-line-length 88.)
line-length = 88
target-version = "py311"
# `_` is gettext's translation function, injected as a builtin at runtime.
builtins = ["_"]
extend-exclude = [
    "mu/contrib",     # vendored third-party code (now empty)
    "mu/modes/api",   # generated API stubs
    "docs",
]

[tool.ruff.lint]
# pycodestyle (E/W) + pyflakes (F): the rules flake8 ran by default.
select = ["E", "W", "F"]
ignore = [
    "E203",  # whitespace before ':' — conflicts with the formatter
    "E731",  # assignment of a lambda expression
    "E402",  # module-level import not at top of file
]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--random-order"

[tool.coverage.run]
omit = [
    "mu/contrib/*",
    "mu/mu_debug.py",
    "mu/__main__.py",
    "mu/wheels/*",
]
